--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "@types/node": "^20.11.4",
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
+    "joi": "^17.11.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/multer": "^1.4.11",
-    "dotenv": "^16.3.1"
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11"
   }
 }
