--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "mongoose": "^8.0.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
