--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "mongoose": "^8.0.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.2",
+    "tsoa": "^6.0.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
@@ -30,6 +30,8 @@
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
-    "@types/multer": "^1.4.11"
+    "@types/multer": "^1.4.11",
+    "@types/swagger-ui-express": "^4.1.6",
+    "concurrently": "^8.2.2"
   }
 }
