--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
         "esModuleInterop": true,
         "paths": {
             "@/*": ["./src/*"]
-          }
+        },
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
     }
 }
